test/fail/exceptions/error_from_method.lly
#[
ValueError: Message.
Traceback:
    from error_from_method.lly:13: in Example::action
    from error_from_method.lly:16: in Example::new
    from error_from_method.lly:19: in __main__
]#

class Example {
    define action {
        if 1: {
            var k = ValueError::new("Message.\n")
            raise k
        }
    }
    action()
}

Example::new()
